test/sema/member-access-through-pointer.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo {
    let i: int;
}

func main() {
    let p: Foo* = null;
    // CHECK: [[@LINE+1]]:9: error: cannot access member through pointer 'Foo*', pointer may be null
    _ = p.i;
}
